--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.1",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "loadash": "^1.0.0",
+        "postcss": "^8.1.14",
+        "vue": "^2.6.13",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.13"
     }
 }
