--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "laravel-mix": "^6.0.6",
-        "loadash": "^1.0.0",
+        "lodash": "^4.17.21",
         "postcss": "^8.1.14",
         "vue": "^2.6.13",
         "vue-loader": "^15.9.5",
