--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {
+    "dependencies": {
         "axios": "^0.21.1",
-        "laravel-mix": "^6.0.6",
+        "laravel-vue-pagination": "^2.3.1",
         "lodash": "^4.17.21",
+        "vue": "^2.6.13"
+    },
+    "devDependencies": {
+        "laravel-mix": "^6.0.6",
         "postcss": "^8.1.14",
-        "vue": "^2.6.13",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.13"
     }
