--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devDependencies": {
         "laravel-mix": "^6.0.6",
         "postcss": "^8.1.14",
+        "prettier": "^2.3.1",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.13"
     }
