--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9b3ca8fc4628b8185ebe",
+    "/css/app.css": "/css/app.css?id=aefe1876af1802310a0f"
 }
