--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
         "vue": "^2.6.13"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
         "laravel-mix": "^6.0.6",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
         "prettier": "^2.3.1",
+        "tailwindcss": "^2.0.2",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.13"
     }
