--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=dda640cc82a77030baf1",
-    "/css/app.css": "/css/app.css?id=aefe1876af1802310a0f"
+    "/js/app.js": "/js/app.js?id=69681c7fa1b773aad06f",
+    "/js/alpine.js": "/js/alpine.js?id=9409b5564fdafaaf856d",
+    "/css/tailwind.css": "/css/tailwind.css?id=b183ba716ea9e897106e",
+    "/css/app.css": "/css/app.css?id=618a1c72c8ce893e1e69"
 }
